--- a/pages/question9.html
+++ b/pages/question9.html
@@ -13,7 +13,7 @@
     <title>Phishing Quiz</title>
 </head>
 
-<body class="ui-body">
+<body  id="9" class="ui-body">
 <div class="content">
     <!-- Question #1 -->
     <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
@@ -29,24 +29,21 @@
 <img style="width: 70%;" src="../images/netflix phish.png" alt="">
 
             </div>
-           
-            <!-- <nav data-role="navbar"> -->
+                     
+        </main>
 
-                <form class="form-questions" action="">
-                    <input type="radio" id="81" name="question9" value="A">
-                    <label for="81">Phishing Email</label>
-                    <input type="radio" id="82" name="question9" value="B">
-                    <label for="82">Valid Email</label><br>
-                    <!-- <input type="submit" value="submit"> -->
-                </form>
+          <!-- <nav data-role="navbar"> -->
+            <div>
+                <div>
+                    <button class="answerButtons" name="A" value="A">Phishing Email</button> <button
+                        class="answerButtons" name="B" value="B">Valid Email</button>
+                </div>
 
                 <div class="content__section--button userBtns">
+                    <button id="8" class="next-btn">Next Question </button>
 
-                <button id="8" class="answer-btn">Next Question </button>
-                <!-- Need to record results. Make a function that has a data libaray of results -->
-            <!-- </nav> -->
-</div>
-        </main>
+                </div>
+            </div>
 
         <!-- Footer Start -->
         <footer data-role="footer" data-position="fixed">
