--- a/pages/question4.html
+++ b/pages/question4.html
@@ -14,7 +14,7 @@
     <title>Phishing Quiz</title>
 </head>
 
-<body class="ui-body">
+<body id="4" class="ui-body">
     <div class="content">
         <!-- Question #1 -->
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
@@ -116,23 +116,20 @@
                     </div>
                 </div>
 
+            </main>
 
-                <form class="form-questions" action="">
-                    <input type="radio" id="31" name="question4" value="A">
-                    <label for="31">Phishing Email</label>
-                    <input type="radio" id="32" name="question4" value="B">
-                    <label for="32">Valid Email</label><br>
-                    <!-- <input type="submit" value="submit"> -->
-                </form>
-
-                <div class="content__section--button userBtns">
-
-                    <button id="3" class="answer-btn">Next Question</button>
-                    <!-- Need to record results. Make a function that has a data libaray of results -->
-                    <!-- </nav> -->
+            <!-- <nav data-role="navbar"> -->
+            <div>
+                <div>
+                    <button class="answerButtons" name="A" value="A">Phishing Email</button> <button
+                        class="answerButtons" name="B" value="B">Valid Email</button>
                 </div>
 
-            </main>
+                <div class="content__section--button userBtns">
+                    <button id="3" class="next-btn">Next Question </button>
+
+                </div>
+            </div>
 
             <!-- Footer Start -->
             <footer data-role="footer" data-position="fixed">
