random number and page working

--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phishing Quiz</title>
-    <script src="https:/code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https:/code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
     <script>
         localStorage.removeItem('userRepo')
@@ -18,44 +18,44 @@
     <div class="content">
         <!-- Home Page Start INSTRUCTIONS -->
 
-    <section class="content__section"  data-theme="b" data-role="page" id="pgInstructions" data-fullscreen="true">
-        <!-- Navbar setup Start -->
-        <header class="content__section--pages" data-role="header">
-            <h1>Instructions</h1>
-        </header>
+        <section class="content__section" data-theme="b" data-role="page" id="pgInstructions" data-fullscreen="true">
+            <!-- Navbar setup Start -->
+            <header class="content__section--pages" data-role="header">
+                <h1>Instructions</h1>
+            </header>
 
-        <!-- Home Page Body Start -->
-        <!-- <main> -->
+            <!-- Home Page Body Start -->
+            <!-- <main> -->
             <div class="content__section--text">
 
-            <p>You will be presented a number of emails. Some of these emails will be legitimate and some of them will
-                be examples of phishing. Your job is to identify whether the email is phishing or if it is for real.</p><br><br>
+                <p>You will be presented a number of emails. Some of these emails will be legitimate and some of them
+                    will
+                    be examples of phishing. Your job is to identify whether the email is phishing or if it is for real.
+                </p><br><br>
 
-                <p><strong>Do not hit back button </strong>once you begin the quiz, <br>otherwise your results will be <strong>lost</strong>.</p><br>
-                </div>
-                <div class="content__section--img-container img-container">
-                    <img class="responsiveImage" width="300" height="auto" src="../images/phishin.gif"
-                        alt="Welcome-logo">
-                </div>
-    
-            <!-- <nav data-role="navbar"> -->
-                <!-- #pgQuestion01 -->
-                <div class="content__section--button">
+                <p><strong>Do not hit back button </strong>once you begin the quiz, <br>otherwise your results will be
+                    <strong>lost</strong>.
+                </p><br>
+            </div>
+            <div class="content__section--img-container img-container">
+                <img class="responsiveImage" width="300" height="auto" src="../images/phishin.gif" alt="Welcome-logo">
+            </div>
 
-                <a href="question1.html" data-icon="bars" class="ui-btn-icon-bottom navView"
-                        data-transition="fade"><button>Start Quiz</button></a> 
-            <!-- </nav> -->
-</div>
-        <!-- </main> -->
+            <!-- This is the NAV  -->
 
+            <div class="content__section--button">
+                <button id="startQuizBtn" class="ui-btn-icon-bottom navView">Start Quiz</button>
 
-    </section>
+            </div>
+            </main>
+
+        </section>
         <!-- Footer Start -->
         <footer data-role="footer" data-position="fixed">
             <h6>227 InfoSec, Inc. 2022&copy;</h6>
         </footer>
-</div>
-   
+    </div>
+
 
 </body>
 
