Made certificate PDF Feature

--- a/pages/results.html
+++ b/pages/results.html
@@ -32,22 +32,22 @@
 
             </form> -->
 
-            <form action="/php/sendResults.php" method="post">
+            <!-- <form action="/php/sendResults.php" method="post"> -->
                 
                 <p value="uname" name="uName" id="uName"></p>
                 <p value="emailAddr" name="emailAddr" id="uEmail"></p>
                 <p style="font-size: 1.5em; margin: 20px 0;"value="results" name="results" >You scored <span  id="uResults"></span>%</p>
 
-                <input type="hidden" name="userName" id="userName">
+                <!-- <input type="hidden" name="userName" id="userName">
                 <input type="hidden" name="userEmailAddr" id="userEmailAddr">
-                <input type="hidden" name="userResults" id="userResults">
+                <input type="hidden" name="userResults" id="userResults"> -->
                 <!-- You scored <input id="userResults" type="input" name="name">% -->
                 <!-- Name: <input type="text" name="name"><br> -->
                 <!-- E-mail: <input type="text" name="email"><br>
                  -->
-                 
-                <input style="width: 200px; height: 50px;background: #C82255; border-radius: 10px; border: none; color: white; font-size: 1.5em; font-family:'Courier New', Courier, monospace" type="submit">
-            </form>
+                 <button id="certBtn" style="width: 200px; height: 50px;background: #C82255; border-radius: 10px; border: none; color: white; font-size: 1.5em; font-family:'Courier New', Courier, monospace" >Get Certificate</button>
+                <!-- <input style="width: 200px; height: 50px;background: #C82255; border-radius: 10px; border: none; color: white; font-size: 1.5em; font-family:'Courier New', Courier, monospace" type="submit"> -->
+            <!-- </form> -->
 
 
             <!-- <nav data-role="navbar">
