blocking certificate if less than 80%

--- a/pages/results.html
+++ b/pages/results.html
@@ -14,7 +14,10 @@
         src="https://cdn.rawgit.com/sphilee/jsPDF-CustomFonts-support/bcc544cd/dist/jspdf.customfonts.min.js"></script>
     <!-- <script src="https://cdn.rawgit.com/sphilee/jsPDF-CustomFonts-support/bcc544cd/dist/default_vfs.js"></script> -->
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/semantic.min.css">
-    
+
+    <link rel="stylesheet" href="../css/busy_indicator.css">
+   
+
 </head>
 
 <body class=" ui-body">
@@ -33,22 +36,28 @@
 
             <!-- Home Page Body Start -->
             <main style="grid-area: text;">
+                <div id="busybox" class="fog_div" style="display: none;">
+                    <div style="top: 332px; left: 768px;"></div>
+                </div>
+
+
                 <!-- <form action="index.php" class="contact_form" method="post" name="form"></form> -->
                 <!-- <p value="emplinq" id="userResults"></p> -->
                 <!-- <input type="submit" id="send" value="Submit Results">
 
-            </form> -->
+                            </form> -->
 
                 <!-- <form action="/php/sendResults.php" method="post"> -->
 
                 <p value="uname" name="uName" id="uName"></p>
                 <p value="emailAddr" name="emailAddr" id="uEmail"></p>
                 <p style="font-size: 1.5em; margin: 20px 0;" value="results" name="results">You scored <span
-                        id="uResults"></span>%</p>
+                        id="uResults"></span>%
+                </p>
 
                 <!-- <input type="hidden" name="userName" id="userName">
-                <input type="hidden" name="userEmailAddr" id="userEmailAddr">
-                <input type="hidden" name="userResults" id="userResults"> -->
+                                    <input type="hidden" name="userEmailAddr" id="userEmailAddr">
+                                        <input type="hidden" name="userResults" id="userResults"> -->
                 <!-- You scored <input id="userResults" type="input" name="name">% -->
                 <!-- Name: <input type="text" name="name"><br> -->
                 <!-- E-mail: <input type="text" name="email"><br>
@@ -61,10 +70,15 @@
 
 
                 <!-- <nav data-role="navbar">
-               
-                <button id="userResults"><a href="" data-icon="bars" class="ui-btn-icon-bottom navView"
-                        data-transition="fade">Submit Results</a> </button>
-            </nav> -->
+
+                                                            <button id="userResults"><a href="" data-icon="bars" class="ui-btn-icon-bottom navView"
+                                                                data-transition="fade">Submit Results</a> </button>
+                                                        </nav> -->
+
+
+
+
+
 
             </main>
 
@@ -77,9 +91,9 @@
         </footer>
 
     </div>
-    </body>
-
-    <script src="../js/results.js"></script>
+</body>
+<script src="../js/busy_indicator.js" type="text/javascript"></script>
+<script src="../js/results.js"></script>
 
 
 </html>
