--- a/pages/question1.html
+++ b/pages/question1.html
@@ -22,7 +22,11 @@
             <header class="question-header" data-role="header">
                 <h1>Question #1</h1>
             </header>
-
+<div class="pBarContainer">
+    <p><span class="pBar" id="sp01"></span><span class="pBar" id="sp02"></span><span class="pBar" id="sp03"></span><span class="pBar" id="sp04"></span><span class="pBar" id="sp05"></span><span class="pBar" id="sp06"></span><span class="pBar" id="sp07"></span><span class="pBar" id="sp08"></span><span class="pBar" id="sp09"></span><span class="pBar" id="sp10"></span></p>
+</div>
+<br>
+<br>
             <!-- Quiz Nav -->
             <iframe width=960 height=300 src="../email_templates/email1.html" frameborder="50">
                 <!-- <div class="em-template">
