Working Progress Bar

--- a/pages/question2.html
+++ b/pages/question2.html
@@ -14,7 +14,7 @@
     <title>Phishing Quiz</title>
 </head>
 
-<body id="2" class="ui-body">
+<body title="A" id="2" class="ui-body">
     <div class="content">
         <!-- Question #1 -->
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
@@ -22,7 +22,13 @@
             <header class="question-header" data-role="header">
                 <h1>Question #2</h1>
             </header>
-
+            
+            <div class="pBarContainer">
+                <p><span class="pBar" id="sp00"></span><span class="pBar" id="sp01"></span><span class="pBar"
+                        id="sp02"></span><span class="pBar" id="sp03"></span><span class="pBar" id="sp04"></span><span
+                        class="pBar" id="sp05"></span><span class="pBar" id="sp06"></span><span class="pBar"
+                        id="sp07"></span><span class="pBar" id="sp08"></span><span class="pBar" id="sp09"></span></p>
+            </div>
             <!-- Quiz Nav -->
             <main>
 
