--- a/pages/question9.html
+++ b/pages/question9.html
@@ -13,26 +13,33 @@
     <title>Phishing Quiz</title>
 </head>
 
-<body  id="9" class="ui-body">
-<div class="content">
-    <!-- Question #1 -->
-    <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
-        <!-- Navbar setup Start -->
-        <header class="question-header" data-role="header">
-            <h1>Question #9</h1>
-        </header>
+<body title="A" id="9" class="ui-body">
+    <div class="content">
+        <!-- Question #1 -->
+        <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
+            <!-- Navbar setup Start -->
+            <header class="question-header" data-role="header">
+                <h1>Question #9</h1>
+            </header>
 
-        <!-- Quiz Nav -->
-        <main>
-
-            <div class="em-template" style="border: none;">
-<img style="width: 70%;" src="../images/netflix phish.png" alt="">
-
+            <div class="pBarContainer">
+                <p><span class="pBar" id="sp00"></span><span class="pBar" id="sp01"></span><span class="pBar"
+                        id="sp02"></span><span class="pBar" id="sp03"></span><span class="pBar" id="sp04"></span><span
+                        class="pBar" id="sp05"></span><span class="pBar" id="sp06"></span><span class="pBar"
+                        id="sp07"></span><span class="pBar" id="sp08"></span><span class="pBar" id="sp09"></span></p>
             </div>
-                     
-        </main>
 
-          <!-- <nav data-role="navbar"> -->
+            <!-- Quiz Nav -->
+            <main>
+
+                <div class="em-template" style="border: none;">
+                    <img style="width: 70%;" src="../images/netflix phish.png" alt="">
+
+                </div>
+
+            </main>
+
+            <!-- <nav data-role="navbar"> -->
             <div>
                 <div>
                     <button class="answerButtons" name="A" value="A">Phishing Email</button> <button
@@ -45,13 +52,13 @@
                 </div>
             </div>
 
-        <!-- Footer Start -->
-        <footer data-role="footer" data-position="fixed">
-            <h6>227 InfoSec, Inc. 2022&copy;</h6>
-        </footer>
-    </section>
+            <!-- Footer Start -->
+            <footer data-role="footer" data-position="fixed">
+                <h6>227 InfoSec, Inc. 2022&copy;</h6>
+            </footer>
+        </section>
 
-</div>
+    </div>
 </body>
 
 <script src="../js/scripts.js"></script>
