--- a/pages/question1.html
+++ b/pages/question1.html
@@ -14,7 +14,7 @@
     <title>Phishing Quiz</title>
 </head>
 
-<body id="1" class="ui-body">
+<body title="A" id="1" class="ui-body">
     <div class="content">
         <!-- Question #1 -->
         <section data-theme="b" data-role="page" id="pgQuestion01" data-fullscreen="true">
@@ -22,11 +22,14 @@
             <header class="question-header" data-role="header">
                 <h1>Question #1</h1>
             </header>
-<div class="pBarContainer">
-    <p><span class="pBar" id="sp01"></span><span class="pBar" id="sp02"></span><span class="pBar" id="sp03"></span><span class="pBar" id="sp04"></span><span class="pBar" id="sp05"></span><span class="pBar" id="sp06"></span><span class="pBar" id="sp07"></span><span class="pBar" id="sp08"></span><span class="pBar" id="sp09"></span><span class="pBar" id="sp10"></span></p>
-</div>
-<br>
-<br>
+            <div class="pBarContainer">
+                <p><span class="pBar" id="sp00"></span><span class="pBar" id="sp01"></span><span class="pBar"
+                        id="sp02"></span><span class="pBar" id="sp03"></span><span class="pBar" id="sp04"></span><span
+                        class="pBar" id="sp05"></span><span class="pBar" id="sp06"></span><span class="pBar"
+                        id="sp07"></span><span class="pBar" id="sp08"></span><span class="pBar" id="sp09"></span></p>
+            </div>
+            <br>
+            <br>
             <!-- Quiz Nav -->
             <iframe width=960 height=300 src="../email_templates/email1.html" frameborder="50">
                 <!-- <div class="em-template">
