add span for hover effect

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             </div>
         <!-- </article> -->
             <div class="content__section--button">
-                <a ”javascript:history.go(0)” href="./pages/register.html"><button>TAKE QUIZ</button></a>
+                <a ”javascript:history.go(0)” href="./pages/register.html">
+                    <button style="vertical-align:middle"><span>TAKE QUIZ</span></button>
+                </a>
             </div>
 
     </section>
