--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -44,7 +44,7 @@
             <!-- This is the NAV  -->
 
             <div class="content__section--button">
-                <button id="startQuizBtn" class="ui-btn-icon-bottom navView">Start Quiz</button>
+                <button id="startQuizBtn" class="ui-btn-icon-bottom navView"><span>Start Quiz</span></button>
 
             </div>
             </main>
