--- a/pages/register.html
+++ b/pages/register.html
@@ -43,10 +43,10 @@
                     </fieldset>
                     <!-- 
                     <a href="./instructions.html"> </a> -->
-                    <div class="content__section--button content__section--button-register userBtns">
+                    <div class="content__section--button content__section--button-register">
 
                     <button class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-action" id="uSignUpBtn"
-                        type="submit">Continue</button>
+                        type="submit"><span>Continue</span></button>
                     <!-- This should take them to instructions page -->
                     </div>
                 </form>
