update email1 em-template

--- a/email_templates/email1.html
+++ b/email_templates/email1.html
@@ -16,55 +16,71 @@
 <body>
     <div class="em-template">
 
-        <h2 style="padding: 2em 0 0;">Hi Julie Mooley, Big Offer! Turn Your Ideas In to A Book. Easy & Affordable</h2>
+        <h2 style="padding: 1em 0 0;">Hi Julie Mooley, Big Offer! Turn Your Ideas In to A Book. Easy &
+            Affordable</h2>
 
         <div class="em-from-div">
-            <span class="em-dot">
-                <p>BS</p>
-            </span>
+            <div class="em-dot">
+                BS
+            </div>
             <h4>
-                <strong>Book Writing Service</strong> &lt;sales@thewritingcrib.com&gt;<br>
+                <strong>Book Writing Service</strong> &lt;sales@thewritingcrib.com&gt;
+            </h4>
+            <h4 class="em-dot-date">
                 2/14/2022 12:06 PM
             </h4>
         </div>
 
         <h4><br>To: Julie Mooley</h4><br>
         <div class="body">
-        <h1>
-            Turn your ideas into a bestselling book with our Professional <br>
-        <span style="color: teal;">Ghostwriting Services</span>
-        </h1>
-        <p><br>Do you want to publish a book under your name but struggle to pen down your idea? Fulfill your dream of
-            becoming a renowned author with our reliable and affordable ghostwriting solutions. Hire an experienced
-            ghostwriter to make it to the best-seller's vault. Turn your rough draft into a compelling story today.</p>
-        <br>
-        
-        <p class="tooltip" style="color: teal; font-size: large;"><strong>Chat with Us Now</strong> 
-            <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z4/ Click or tap to follow link</span>
-        </p><br>
+            <h1 style="font-size: 2em;">
+                Turn your ideas into a bestselling book with our Professional <br>
+                <span style="color: teal;">Ghostwriting Services</span>
+            </h1>
+            <p><br>Do you want to publish a book under your name but struggle to pen down your idea? Fulfill
+                your dream of
+                becoming a renowned author with our reliable and affordable ghostwriting solutions. Hire an
+                experienced
+                ghostwriter to make it to the best-seller's vault. Turn your rough draft into a compelling
+                story
+                today.</p>
+            <br>
 
-        <p  style="color: teal; text-decoration: underline; font-size: large"><strong>Call Now (855) 205-1739</strong>
-        </p><br>
+            <p class="tooltip" style="color: teal; font-size: large;"><strong>Chat with Us Now</strong>
+                <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z4/ Click or
+                    tap to
+                    follow link</span>
+            </p><br>
 
-        <div class="tooltip tooltip-button">View Package Price
-            <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z5/ <br>Click or tap to follow link</span>
-        </div><br>
+            <p style="color: teal; text-decoration: underline; font-size: large"><strong>Call Now (855)
+                    205-1739</strong>
+            </p><br>
 
-        <p  style="text-align: center; font-size: smaller">You are subscribed to this email as <span style="border-bottom: 2px dotted;">juliemooley@mooleycorp.com</span><br>
-            Click here to modify your 
-            <span class="tooltip" style="color: blue; text-decoration: underline;">preferences
-                <span class="tooltiptext">https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/ <br>Click or tap to follow link
+            <div class="tooltip tooltip-button">View Package Price
+                <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z5/ <br>Click
+                    or
+                    tap to follow link</span>
+            </div><br>
+
+            <p style="text-align: center; font-size: smaller">You are subscribed to this email as <span
+                    style="border-bottom: 2px dotted;">juliemooley@mooleycorp.com</span><br>
+                Click here to modify your
+                <span class="tooltip" style="color: blue; text-decoration: underline;">preferences
+                    <span
+                        class="tooltiptext">https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/
+                        <br>Click or tap to follow link
+                    </span>
                 </span>
-        </span> 
-        or 
-        <span class="tooltip" style="color: blue; text-decoration: underline;">unsubscribe
-            <span class="tooltiptext">https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/ <br> Click or tap to follow link
-            </span>
-        </span>.
-        </p>
-    </div><br>
+                or
+                <span class="tooltip" style="color: blue; text-decoration: underline;">unsubscribe
+                    <span
+                        class="tooltiptext">https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/
+                        <br> Click or tap to follow link
+                    </span>
+                </span>.
+            </p>
+        </div>
     </div>
-
 </body>
 
 </html>
