add iframe/style phish-valid btns/add span for hvr

--- a/pages/question1.html
+++ b/pages/question1.html
@@ -28,8 +28,7 @@
 <br>
 <br>
             <!-- Quiz Nav -->
-            <iframe width=960 height=300 src="../email_templates/email1.html" frameborder="50">
-                <!-- <div class="em-template">
+            <iframe width=960 height=300 src="../email_templates/email1.html" >
 
                     <h2 style="padding: 1em 0 0;">Hi Julie Mooley, Big Offer! Turn Your Ideas In to A Book. Easy &
                         Affordable</h2>
@@ -100,15 +99,16 @@
             <!-- <nav data-role="navbar"> -->
 
             <div>
-                <div>
-                    <button class="answerButtons" name="A" value="A">Phishing Email</button> <button
-                        class="answerButtons" name="B" value="B">Valid Email</button>
+
+                <div class="content__section--button answerBtns">
+                    <button class="answerButtons" name="A" value="A">Phishing</button> 
+                    <button class="answerButtons" name="B" value="B">Valid</button>
                 </div>
 
                 <div class="content__section--button userBtns">
-                    <button id="0" class="next-btn">Next Question </button>
-
+                    <button id="0" class="next-btn"><span>Next</span></button>
                 </div>
+
             </div>
 
             <!-- Footer Start -->
