--- a/pages/question4.html
+++ b/pages/question4.html
@@ -127,14 +127,13 @@
 
             <!-- <nav data-role="navbar"> -->
             <div>
-                <div>
-                    <button class="answerButtons" name="A" value="A">Phishing Email</button> <button
-                        class="answerButtons" name="B" value="B">Valid Email</button>
+                <div class="content__section--button answerBtns">
+                    <button class="answerButtons" name="A" value="A">Phishing</button> 
+                    <button class="answerButtons" name="B" value="B">Valid</button>
                 </div>
 
                 <div class="content__section--button userBtns">
-                    <button id="3" class="next-btn">Next Question </button>
-
+                    <button id="0" class="next-btn"><span>Next</span></button>
                 </div>
             </div>
 
