--- a/pages/question1.html
+++ b/pages/question1.html
@@ -97,7 +97,7 @@
                             </span>.
                         </p>
                     </div>
-                </div> -->
+                </div>
             </iframe>
             <!-- <nav data-role="navbar"> -->
 
