updated with changed from question6.html

--- a/email_templates/email6.html
+++ b/email_templates/email6.html
@@ -18,26 +18,29 @@
     <div class="em-template">
 
         <div class="em-from-div">
-            <span class="em-dot">
-                <p>D</p>
-            </span>
+            <div class="em-dot">
+                D
+            </div>
             <h4>
                 <strong>Dropbox</strong>
-                    <span style="color: gray;">&lt;no-reply@dropboxmail.com&gt;<br>
-                1/11/2022 4:48 PM</span>
+                <span style="color: gray;">&lt;no-reply@dropboxmail.com&gt;</span>
+            </h4>
+            <h4 class="em-dot-date" style="color: gray;">
+                1/11/2022 4:48 PM
             </h4>
         </div>
         <br>
         <div class="body">
             <div class="dropbox">
-                <img src="images/dropbox-logo.png" alt="dropbox logo">
+                <img src="../images/dropbox-logo.png" alt="dropbox logo">
             </div>
             <p>
                 Hello,
             </p>
-           <br>
+            <br>
 
-            <p> Your Dropbox is full and is no longer syncing files. New files added to your Dropbox folder won't be accessible on your other devices and won't be backed up online.
+            <p> Your Dropbox is full and is no longer syncing files. New files added to your Dropbox folder
+                won't be accessible on your other devices and won't be backed up online.
             </p><br><br>
             <p> Upgrade your Dropbox today and get 1 TB (1,000 GB) of space and powerful sharing features.
             </p><br><br>
@@ -47,12 +50,11 @@
             </div><br><br>
 
             <p>
-                For other ways to get more space, visit our 
-                <span class="tooltip"
-                style="color: blue;">Get More Space
-                <span class="tooltiptext">https://www.dropbox.com/help/space/get-more-space
-                </span>
-                 </span>page.<br><br>
+                For other ways to get more space, visit our
+                <span class="tooltip" style="color: blue;">Get More Space
+                    <span class="tooltiptext">https://www.dropbox.com/help/space/get-more-space
+                    </span>
+                </span>page.<br><br>
             </p>
             <p>
                 Happy Dropboxing!<br><br>
@@ -61,15 +63,13 @@
                 - The Dropbox Team<br><br>
             </p>
             <p>
-                P.S. If you need the biggest plan we've got, check out 
-                <span class="tooltip"
-                style="color: blue;">Dropbox for Business.
+                P.S. If you need the biggest plan we've got, check out
+                <span class="tooltip" style="color: blue;">Dropbox for Business.
                     <span class="tooltiptext">https://www.dropbox.com/business</span>
                 </span>
             </p><br><br>
-           
+
         </div>
-    </div>
-</body>
+    </div></body>
 
 </html>
