change out em-template with iframe

--- a/pages/question6.html
+++ b/pages/question6.html
@@ -32,8 +32,8 @@
 
             <!-- Quiz Nav -->
             <main>
-
-                <div class="em-template">
+                <iframe width=960 height=300 src="../email_templates/email6.html" >
+                    <!-- <div class="em-template">
 
                     <div class="em-from-div">
                         <div class="em-dot">
@@ -88,8 +88,8 @@
                         </p><br><br>
 
                     </div>
-                </div>
-
+                </div> -->
+</iframe>
             </main>
             <!-- <nav data-role="navbar"> -->
             <div>
