updated span tag animation

--- a/pages/question1.html
+++ b/pages/question1.html
@@ -14,8 +14,8 @@
     <title>Phishing Quiz</title>
 </head>
 
-<body title="A" id="1" class="ui-body">
-    <div class="content">
+<body id="1" class="ui-body">
+    <div class="content" value="A">
         <!-- Question #1 -->
         <section data-theme="b" data-role="page" id="pgQuestion01" data-fullscreen="true">
             <!-- Navbar setup Start -->
@@ -31,9 +31,9 @@
             <br>
             <br>
             <!-- Quiz Nav -->
-            <iframe width=960 height=300 src="../email_templates/email1.html" >
+            <iframe name="A" width=960 height=300 src="../email_templates/email1.html" >
 
-                    <h2 style="padding: 1em 0 0;">Hi Julie Mooley, Big Offer! Turn Your Ideas In to A Book. Easy &
+                    <!-- <h2 style="padding: 1em 0 0;">Hi Julie Mooley, Big Offer! Turn Your Ideas In to A Book. Easy &
                         Affordable</h2>
 
                     <div class="em-from-div">
@@ -97,7 +97,7 @@
                             </span>.
                         </p>
                     </div>
-                </div>
+                </div> -->
             </iframe>
             <!-- <nav data-role="navbar"> -->
 
@@ -109,7 +109,7 @@
                 </div>
 
                 <div class="content__section--button userBtns">
-                    <button id="0" class="next-btn"><span>Next</span></button>
+                    <button id="0" class="next-btn">Next<span></span></button>
                 </div>
 
             </div>
