--- a/pages/question6.html
+++ b/pages/question6.html
@@ -99,7 +99,7 @@
                 </div>
 
                 <div class="content__section--button userBtns">
-                    <button id="0" class="next-btn"><span>Next</span></button>
+                    <button id="0" class="next-btn">Next<span></span></button>
                 </div>
             </div>
 
