--- a/pages/question4.html
+++ b/pages/question4.html
@@ -35,7 +35,7 @@
 
                 <div class="em-template">
 
-                    <h2 style="padding: 2em 0 0;">You made a purchase with your TJX Rewards® Platinum Mastercard®.</h2>
+                    <h2 style="padding: 2em 0 0;">You made a purchase with your TJX Rewards® Platinum Mastercard®.</h2>
 
                     <div class="em-from-div">
                         <div class="em-dot">
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="content__section--button userBtns">
-                    <button id="0" class="next-btn"><span>Next</span></button>
+                    <button id="0" class="next-btn">Next<span></span></button>
                 </div>
             </div>
 
